feat: activationcode
