# src/controllers/auth.controller.ts
@@ -113,7 +113,9 @@ export default {
                     {
                         username: identifier
                     }
-                ]
+                ],
+                isActive: true
+
             });
 
             if (!userByIdentifier) {
@@ -189,6 +191,49 @@ export default {
                 data: null
 
             });
+        }
+    },
+
+    async activation (req: Request, res: Response) {
+
+        /**
+            #swagger.tags = ['Auth']
+            #swagger.requestBody = {
+                required: true,
+                schema: { $ref: "#/components/schemas/ActivationRequest" }
+            }
+         */
+
+        try {
+
+            const { code } = req.body as { code: string };
+
+            const user = await UserModel.findOneAndUpdate({
+                activationCode: code,
+            },
+            {
+                isActive: true
+            },
+            {
+                new: true            
+            })
+
+            res.status(200).json({
+                message: "Activation successfully",
+                data: user
+            })
+            
+        } catch (error) {
+            
+            const err = error as unknown as Error;
+
+            res.status(400).json({
+
+                message: err.message,
+                data: null
+
+            });
+
         }
     }
 }
